--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
@@ -37,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  build_runner: ^2.0.0
+  hive_generator: ^1.0.0
   flutter_test:
     sdk: flutter
 
